Issue #13392: Writing a pyc file should now be atomic under Windows as well.